--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h4>Research</h4>
             <p>
             <em>Foundations of Probabilistic Machine Learning.</em>
-            In what conditions is probabilistic inference tractable?
+            What conditions make probabilistic inference tractable?
             Towards this question, I'm studying circuit models which serve as a 
             unifying framework for myriad known tractable probabilistic models 
             (e.g. Probabilistic Graphical Models).
