--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
             <ol reversed>
             <li> Oliver Broadrick, Honghua Zhang, Guy Van den Broeck. Polynomial Semantics of Tractable Probabilistic Circuits. Under review. (<a href="https://arxiv.org/abs/2402.09085">arxiv</a>)
 <!--            <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.-->
-            <li> Oliver Broadrick. <a href="/papers/broadrick_ms_thesis.pdf">Risk-Limiting Audit PROVIDENCE and Round Size Considerations</a>. MS Thesis, The George Washington University, 2023.
-            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. USENIX Security 2023. (<a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
+            <li> Oliver Broadrick. Risk-Limiting Audit PROVIDENCE and Round Size Considerations. MS Thesis, The George Washington University, 2023. (<a href="/papers/broadrick_ms_thesis.pdf">pdf</a>)
+            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. USENIX Security 2023. (<a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">pdf</a>, <a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arxiv version</a>)
 
-            <li> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari. Real-Time AI: Using AI on the Tactical Edge. Elsevier book chapter in "Putting AI in the Critical Loop: Assured Trust and Autonomy in Human-Machine Teams", invited chapter based on presentation at 2022 AAAI Spring Symposium.
+            <li> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari. Real-Time AI: Using AI on the Tactical Edge. Elsevier book chapter in "Putting AI in the Critical Loop: Assured Trust and Autonomy in Human-Machine Teams", invited chapter based on presentation at 2022 AAAI Spring Symposium. (<a href="https://www.sciencedirect.com/science/article/abs/pii/B9780443159886000042">link</a>)
 
-            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski. <a href="/papers/simulations-of-ballot-polling-rlas.pdf">Simulations of Ballot Polling Risk-Limiting Audits</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (<a href="https://youtu.be/XyWogUQDf1c">talk</a>, <a href="/slides/audit_sims.pdf">slides</a>)
+            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski. Simulations of Ballot Polling Risk-Limiting Audits. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (<a href="/papers/simulations-of-ballot-polling-rlas.pdf">pdf</a>, <a href="https://youtu.be/XyWogUQDf1c">talk</a>, <a href="/slides/audit_sims.pdf">slides</a>)
 
             </ol>
 
