--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--<tr><td><image border=1 bordercolor=black src="pv.jpg"> <P align="right"></P></td></tr>-->
 
             <p>
-                I'm a PhD student in Computer Science at UCLA advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
+                I'm a PhD student in the Computer Science Department at UCLA advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
@@ -114,7 +114,7 @@
 
             <h6>Research Talks</h6>
             <ul>
-                <li> May 2024, "Polynomial Semantics of Probabilistic Circuits." Invited talk, SNAIL Seminar, University of S&atilde;o Paulo. <a href="/slides/polynomial_semantics_sao_paulo.pdf">slides</a>
+                <li> May 2024, "Polynomial Semantics of Probabilistic Circuits." Invited talk, SNAIL Seminar, University of S&atilde;o Paulo. <a href="/slides/polynomial_semantics.pdf">slides</a>
                 <li> August 2023, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security 2023. <a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>
             </ul>
 
