--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h6>Research Talks</h6>
             <ul>
                 <li> May 2024, "Polynomial Semantics of Probabilistic Circuits." Invited talk, SNAIL Seminar, University of S&atilde;o Paulo. <a href="/slides/polynomial_semantics.pdf">slides</a>
-                <li> August 2023, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security 2023. <a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>
+                <li> August 2023, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security. <a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>
             </ul>
 
             </div><!--end research section-->
