--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 
             <h6>Research Talks</h6>
             <ul>
-                <li> May 2024, "Polynomial Semantics of Probabilistic Circuits." Invited talk, SNAIL Seminar, University of S&atilde;o Paulo. <a href="/slides/polynomial_semantics.pdf">slides</a>
-                <li> August 2023, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security. <a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>
+                <li> May 2024, "Polynomial Semantics of Probabilistic Circuits." Invited talk, SNAIL Seminar, University of S&atilde;o Paulo. (<a href="/slides/polynomial_semantics.pdf">slides</a>)
+                <li> August 2023, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security. (<a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>)
             </ul>
 
             </div><!--end research section-->
