--- a/index.html
+++ b/index.html
@@ -44,15 +44,18 @@
             <div><!--begin research section-->
             <h4>Research</h4>
             <p>
-            <em>Foundations of Probabilistic Machine Learning.</em>
-            What conditions make probabilistic inference tractable?
-            Towards this question, I'm studying circuit models which serve as a 
-            unifying framework for myriad known tractable probabilistic models 
-            (e.g. Probabilistic Graphical Models).
-            In my first paper on this topic [5], we consider a number of previously
-            studied polynomial semantics for such circuit models and show that they
-            are all tractable and equally <em>expressive-efficient</em>, i.e. 
-            that they can be reduced to each other.
+            <em>Theory of Tractable Inference</em>
+            Given a model of the world, what 
+            questions can be efficiently answered?
+            In general, there is a
+            tradeoff between the expressiveness and tractability
+            modelling languages, and I'm studying this tradeoff.
+            For example, for the fundamental and well-studied inference 
+            task of marginalization, we've found a very general tractable
+            modelling language that captures other seemingly distinct 
+            models (e.g., graphical models, sum-product networks, 
+            generating circuits) up to
+            polynomial time transformations [5].
             </p>
             <!--
             <p>
@@ -65,14 +68,13 @@
                 Risk-limiting audits (RLAs) are
                 rigorous statistical procedures
                 used to detect errors in election results.
-                In <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>'s group, I have done work
-                including experiments [1] 
-                and the development of a new statistical test, PROVIDENCE,
-                the most efficient and secure ballot polling RLA known [3].
-                PROVIDENCE's pilot use in the US State of Rhode Island is described in 
-                <a href="https://www.ri.gov/press/view/43054">their press release</a>.
-                PROVIDENCE is implemented in open source <a href="https://www.voting.works/risk-limiting-audits">Arlo</a>, the most
-                popular election audit software in the US.
+                I've conducted experiments [1] to understand the 
+                behavior of existing RLAs and developed
+                a new statistical test, PROVIDENCE [3],
+                the most efficient and secure ballot polling RLA known 
+                today.
+                PROVIDENCE has been <a href="https://www.ri.gov/press/view/43054">piloted</a> and is implemented in the most popular election audit
+                software in the US, open source <a href="https://www.voting.works/risk-limiting-audits">Arlo</a>.
                 <!--I presented <a href="/posters/audits_poster.pdf">a poster</a> on some of this work at the 2022 GW SEAS R+D Showcase, and <a href="/posters/providence_poster.pdf">another poster</a> at the 2023 GW Business and Policy Forum on Cybersecurity.-->
             </p>
             <p>
