--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
             <div><!--begin research section-->
             <h4>Research</h4>
             <p>
-            <em>Theory of Tractable Inference</em>
-            Given a model of the world, what 
-            questions can be efficiently answered?
-            In general, there is a
-            tradeoff between the expressiveness and tractability
-            modelling languages, and I'm studying this tradeoff.
+            <em>Theory of Tractable Inference.</em>
+            What can be efficiently determined given a model of the world?
+            Towards this question, I'm studying the 
+            tradeoff between expressiveness and tractability in
+            modelling languages. 
             For example, for the fundamental and well-studied inference 
-            task of marginalization, we've found a very general tractable
+            task of marginalization, we've found a general tractable
             modelling language that captures other seemingly distinct 
             models (e.g., graphical models, sum-product networks, 
             generating circuits) up to
