--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
             <em>Theory of Tractable Inference.</em>
             What can be efficiently determined given a model of the world?
             Towards this question, I'm studying the 
-            tradeoff between expressiveness and tractability in
-            modelling languages. 
+            inherenet tradeoff between expressiveness and tractability 
+            of models.
             For example, for the fundamental and well-studied inference 
-            task of marginalization, we've found a general tractable
-            modelling language that captures other seemingly distinct 
+            task of marginalization, we've shown how a single
+            tractable modelling language captures a myriad of 
+            other seemingly distinct 
             models (e.g., graphical models, sum-product networks, 
             generating circuits) up to
             polynomial time transformations [5].
