--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <em>Theory of Tractable Inference.</em>
             What can be efficiently determined given a model of the world?
             Towards this question, I'm studying the 
-            inherenet tradeoff between expressiveness and tractability 
+            inherent tradeoff between expressiveness and tractability 
             of models.
             For example, for the fundamental and well-studied inference 
             task of marginalization, we've shown how a single
