--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <em>Theory of Tractable Inference.</em>
             What can be efficiently determined given a model of the world?
             Towards this question, I'm studying the 
-            inherent tradeoff between expressiveness and tractability 
-            of models.
+            inherent tradeoff in models between expressiveness and inference
+            tractability.
             For example, for the fundamental and well-studied inference 
             task of marginalization, we've shown how a single
             tractable modelling language captures a myriad of 
