--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--<tr><td><image border=1 bordercolor=black src="pv.jpg"> <P align="right"></P></td></tr>-->
 
             <p>
-                I'm a PhD student in the Computer Science Department at UCLA advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
+                I'm a PhD student in computer science at UCLA advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science (BS and MS) at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
