--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
             Towards this question, I'm studying the 
             inherent tradeoff in models between expressiveness and inference
             tractability.
-            For example, for the fundamental and well-studied inference 
-            task of marginalization, we've shown how a single
+            For example, for the fundamental inference 
+            task of marginalization, we've shown how a common
             tractable modelling language captures a myriad of 
-            other seemingly distinct 
-            models (e.g., graphical models, sum-product networks, 
-            generating circuits) up to
+            other models (e.g., tractable graphical models, sum-product 
+            networks, probabilistic generating circuits) up to
             polynomial time transformations [5,6].
             </p>
             <!--
