--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <h4>Research</h4>
             <p>
             <em>Theory of Tractable Inference.</em>
-            What can be efficiently determined given a model of the world?
-            Towards this question, I'm studying the 
-            inherent tradeoff in models between expressiveness and inference
+            What can be efficiently determined from a model of the world?
+            In the spirit of this question, I'm studying the 
+            tradeoff in models between expressiveness and inference
             tractability.
             For example, for the fundamental inference 
             task of marginalization, we've shown how a common
-            tractable modelling language captures a myriad of 
-            other models (e.g., tractable graphical models, sum-product 
+            tractable modeling language captures known tractable models 
+            (e.g., bounded-treewidth graphical models, sum-product 
             networks, probabilistic generating circuits) up to
             polynomial time transformations [5,6].
             </p>
@@ -117,7 +117,8 @@
 
             <h6>Research Talks</h6>
             <ul>
-                <li> May 2024, "Polynomial Semantics of Probabilistic Circuits." Invited talk, <a href="https://liamf.ime.usp.br/snail.html">SNAIL Seminar</a>, University of S&atilde;o Paulo. (<a href="/slides/polynomial_semantics.pdf">slides</a>)
+                <!--<li> July 2024, "Polynomial Semantics of Tractable Probabilistic Circuits." Oral presentation at UAI 2024, <a href="https://liamf.ime.usp.br/snail.html">SNAIL Seminar</a>. (<a href="/slides/polynomial_semantics.pdf">slides</a>)-->
+                <li> May 2024, "Polynomial Semantics of Tractable Probabilistic Circuits." Invited talk, <a href="https://liamf.ime.usp.br/snail.html">SNAIL Seminar</a>, University of S&atilde;o Paulo. (<a href="/slides/polynomial_semantics.pdf">slides</a>)
                 <li> August 2023, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security. (<a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>)
             </ul>
 
