--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <!--I have tutored high school and college students for the
             <a href="https://nrotc.gwu.edu/">US Navy ROTC Capital Battalion</a>,
             <a href="https://www.tungstenprep.com/">Tungsten Prep</a>, and the George Washington University Athletics Department.--> 
-            At GWU, I was a teaching assistant in Discrete Mathematics and Theory of Computation courses for several semesters.
+            <!--At GWU, I was a teaching assistant in Discrete Mathematics and Theory of Computation courses for several semesters.-->
             <!--I've been a teaching assistant in George Washington University's courses on Discrete Mathematics and Theory of Computing for several semesters.-->
             </p>
             <p>
