--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h6>Publications</h6>
             Also see my <a href="https://scholar.google.com/citations?user=wn58ujYAAAAJ&hl=en">Google Scholar</a> page.
             <ol reversed> <!-- ul -->
-                <li> Anji Liu, Oliver Broadrick, Mathias Niepert, Guy Van den Broeck. Discrete Copula Diffusion. Under review, 2024. (<a href="/papers/2024_under_review_discrete_copula_diffusion.pdf">pdf</a>, <a href="https://arxiv.org/pdf/2410.01949">arXiv</a>)
+                <li> Anji Liu, Oliver Broadrick, Mathias Niepert, Guy Van den Broeck. Discrete Copula Diffusion. To appear, ICLR, 2025. (<a href="/papers/2024_under_review_discrete_copula_diffusion.pdf">pdf</a>, <a href="https://arxiv.org/pdf/2410.01949">arXiv</a>)
                 <li> Oliver Broadrick, William Cao, Benjie Wang, Martin Trapp, Guy Van den Broeck. Probabilistic Circuits for Cumulative Distribution Functions. TPM Workshop at UAI 2024. (<a href="/papers/2024_TPM_Broadrick_circuits_for_cdfs.pdf">pdf</a>, <a href="https://arxiv.org/abs/2408.04229">arXiv</a>)
                     <li> Oliver Broadrick, Honghua Zhang, Guy Van den Broeck. Polynomial Semantics of Tractable Probabilistic Circuits. UAI 2024, Oral Presentation. (<a href="/papers/2024_UAI_Broadrick_polynomial_semantics.pdf">pdf</a>, <a href="https://arxiv.org/abs/2402.09085">arXiv</a>, <a href="https://www.youtube.com/watch?v=x3vG9yxnBWE&t=4169s">talk</a>, <a href="./slides/polynomial_semantics.pdf">slides</a>)
 <!--            <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.-->
