--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <h4>Teaching</h4>
             <p>
             I love teaching. Since high school I have tutored for hundreds of hours at the high school and college level in mathematics, computer science, and physics.
-            I have also served as a teaching assistant at GWU and UCLA in undergrad courses including Theory of Computing, Discrete Mathematics, and Artificial Intelligence.
+            I have also served as a teaching assistant at GWU and UCLA in undergrad courses including Theory of Computation, Discrete Mathematics, and Artificial Intelligence.
             <!--I have tutored high school and college students for the
             <a href="https://nrotc.gwu.edu/">US Navy ROTC Capital Battalion</a>,
             <a href="https://www.tungstenprep.com/">Tungsten Prep</a>, and the George Washington University Athletics Department.--> 
