--- a/index.html
+++ b/index.html
@@ -44,17 +44,37 @@
             <div><!--begin research section-->
             <h4>Research</h4>
             <p>
-            <em>Theory of Tractable Inference.</em>
-            What can be efficiently determined from a model of the world?
+            <em>Tractable Modeling.</em>
+            Tractable models are succinct representations of functions 
+            (e.g., 
+            probability mass functions) whose structure guarantees 
+            that inference tasks remain exact and 
+            efficient. Such models constitute a promising avenue towards
+            addressing challenges in modern artificial intelligence
+            like privacy, fairness, robustness, and interpretability.
+            I conduct research on both the theoretical foundations of
+            tractable models, for example studying tradeoffs in 
+            expressivity and tractability [5,6,8], and their application, 
+            for example in discrete diffusion [7].
+
+            <!--What can be efficiently determined from a model of the world?
             In the spirit of this question, I'm studying the 
-            tradeoff in models between expressiveness and inference
+            tradeoff in (probabilistic) models between 
+            expressiveness and inference
             tractability.
             For example, for the fundamental inference 
             task of marginalization, we've shown how a common
-            tractable modeling language captures known tractable models 
+            modeling language captures known tractable models 
             (e.g., bounded-treewidth graphical models, sum-product 
             networks, probabilistic generating circuits) up to
-            polynomial time transformations [5,6].
+            polynomial time transformations [5,6]. Moreover, we've
+            shown that such models fall short of capturing all functions 
+            with tractable marginalization, revealing the potential
+            for yet more expressive tractable models.
+            In addition to the theoretical foundations of tractable 
+            modeling, I'm interested in finding new ways to leverage
+            tractability in practice-->
+            
             </p>
             <!--
             <p>
