--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             like privacy, fairness, robustness, and interpretability.
             I conduct research on both the theoretical foundations of
             tractable models, for example studying tradeoffs in 
-            expressivity and tractability [5,6,8], and their application, 
+            expressivity and tractability [5,6,8], and their applications, 
             for example in discrete diffusion [7].
 
             <!--What can be efficiently determined from a model of the world?
