--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=QxPLzsVhpH8IW8qtWLYzSG_KUJsQkqJ59elqyo8aR9g"></script>
+
 <nav class="navbar navbar-dark bg-dark">
     <div class="col-xs-0 col-md-3"></div>
     <div class="col-xs-12 col-md-6">
