--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
 
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=QxPLzsVhpH8IW8qtWLYzSG_KUJsQkqJ59elqyo8aR9g"></script>
 
 <nav class="navbar navbar-dark bg-dark">
     <div class="col-xs-0 col-md-3"></div>
@@ -184,5 +183,7 @@
 ssorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+    <!--<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=QxPLzsVhpH8IW8qtWLYzSG_KUJsQkqJ59elqyo8aR9g"></script>-->
 
 </body>
