--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
             <p>
             I love teaching. Since high school I have tutored for hundreds of hours at the high school and college level in mathematics, computer science, and physics.
             I have also served as a teaching assistant at GWU and UCLA in undergrad courses including Theory of Computation, Discrete Mathematics, and Artificial Intelligence.
+            <ul>
+            <li> Algorithms and Complexity: Spring 2025 (UCLA)
+            <li>Fundamentals of Artificial Intelligence: Fall 2024 (UCLA)
+            <li>Foundations of Computing: Spring 2021, Spring 2022, Spring 2023 (GWU)
+            <li>Discrete Structures: Spring 2020, Fall 2020, Fall 2021, Fall 2022 (GWU)
+            </ul>
             <!--I have tutored high school and college students for the
             <a href="https://nrotc.gwu.edu/">US Navy ROTC Capital Battalion</a>,
             <a href="https://www.tungstenprep.com/">Tungsten Prep</a>, and the George Washington University Athletics Department.--> 
