--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!--<tr><td><image border=1 bordercolor=black src="pv.jpg"> <P align="right"></P></td></tr>-->
 
             <p>
-                I'm a PhD student in computer science at UCLA advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science (BS and MS) at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
+                I'm a PhD student in computer science at UCLA advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science (BS and MS) at GWU, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
@@ -149,7 +149,7 @@
             <h4>Teaching</h4>
             <p>
             I love teaching. Since high school I have tutored for hundreds of hours at the high school and college level in mathematics, computer science, and physics.
-            I have also served as a teaching assistant at GWU and UCLA in undergrad courses including Theory of Computation, Discrete Mathematics, and Artificial Intelligence.
+            I have also served as a teaching assistant in the following courses.
             <ul>
             <li> Algorithms and Complexity: Spring 2025 (UCLA)
             <li>Fundamentals of Artificial Intelligence: Fall 2024 (UCLA)
