new image, shorten some text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
-            <p><img src="./imgs/2023.jpg" width="300" class="float-md-right p-2"></p>
+            <p><img src="./imgs/oliver2025.png" width="300" class="float-md-right p-2"></p>
 <!--<tr><td><image border=1 bordercolor=black src="pv.jpg"> <P align="right"></P></td></tr>-->
 
             <p>
@@ -46,6 +46,8 @@
             <h4>Research</h4>
             <p>
             <em>Tractable Modeling.</em>
+What (minimal) properties of an AI model enable provable guarantees about its behavior? I study the tradeoff in models between expressive-efficiency (size) and tractability (computational complexity of answering queries about the model), especially focused on probabilistic models tractable for the fundamental query of marginalization.
+<!--
             Tractable models are succinct representations of functions 
             (e.g., 
             probability mass functions) whose structure guarantees 
@@ -56,7 +58,7 @@
             I conduct research on both the theoretical foundations of
             tractable models, for example studying tradeoffs in 
             expressivity and tractability [5,6,8], and their applications, 
-            for example in discrete diffusion [7].
+            for example in discrete diffusion [7].-->
 
             <!--What can be efficiently determined from a model of the world?
             In the spirit of this question, I'm studying the 
@@ -85,7 +87,8 @@
             -->
             <p>
             <em>Statistical Election Audits.</em>
-                Risk-limiting audits (RLAs) are
+		Previously I studied and developed rigorous statistical procedures for detecting errors in election results [1,3,4].
+<!--                Risk-limiting audits (RLAs) are
                 rigorous statistical procedures
                 used to detect errors in election results.
                 I've conducted experiments [1] to understand the 
@@ -94,7 +97,7 @@
                 the most efficient and secure ballot polling RLA known 
                 today.
                 PROVIDENCE has been <a href="https://www.ri.gov/press/view/43054">piloted</a> and is implemented in the most popular election audit
-                software in the US, open source <a href="https://www.voting.works/risk-limiting-audits">Arlo</a>.
+                software in the US, open source <a href="https://www.voting.works/risk-limiting-audits">Arlo</a>.-->
                 <!--I presented <a href="/posters/audits_poster.pdf">a poster</a> on some of this work at the 2022 GW SEAS R+D Showcase, and <a href="/posters/providence_poster.pdf">another poster</a> at the 2023 GW Business and Policy Forum on Cybersecurity.-->
             </p>
             <p>
@@ -148,10 +151,9 @@
             <div><!--begin teaching section-->
             <h4>Teaching</h4>
             <p>
-            I love teaching. Since high school I have tutored for hundreds of hours at the high school and college level in mathematics, computer science, and physics.
-            I have also served as a teaching assistant in the following courses.
+            I have tutored students at the high school and college level in mathematics, computer science, and physics, and I've been a teaching assistant:
             <ul>
-            <li> Algorithms and Complexity: Spring 2025 (UCLA)
+            <li> Algorithms and Complexity: Spring 2025, Summer 2025 (UCLA)
             <li>Fundamentals of Artificial Intelligence: Fall 2024 (UCLA)
             <li>Foundations of Computing: Spring 2021, Spring 2022, Spring 2023 (GWU)
             <li>Discrete Structures: Spring 2020, Fall 2020, Fall 2021, Fall 2022 (GWU)
