--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ What (minimal) properties of an AI model enable provable guarantees about its be
             <h6>Publications</h6>
             Also see my <a href="https://scholar.google.com/citations?user=wn58ujYAAAAJ&hl=en">Google Scholar</a> page.
             <ol reversed> <!-- ul -->
-                <li> Poorva Garg, Benjie Wang, Oliver Broadrick, Guy Van den Broeck, Todd Millstein. Bitblasting for Constrained Decorrelation in Tractable Image Modeling. TPM Workshop at UAI 2025. (forthcoming)
+                <!--<li> Poorva Garg, Benjie Wang, Oliver Broadrick, Guy Van den Broeck, Todd Millstein. Bitblasting for Constrained Decorrelation in Tractable Image Modeling. TPM Workshop at UAI 2025. (forthcoming)-->
                 <li> Oliver Broadrick, Sanyam Agarwal, Guy Van den Broeck, Markus Bläser. The Limits of Tractable Marginalization. ICML, 2025. (<a href="/papers/2025_ICML_limits_of_marginalization.pdf">pdf</a>, <a href="https://arxiv.org/abs/2506.12020">arXiv</a>)
                 <li> Anji Liu, Oliver Broadrick, Mathias Niepert, Guy Van den Broeck. Discrete Copula Diffusion. ICLR, 2025. (<a href="/papers/2025_ICLR_discrete_copula_diffusion.pdf">pdf</a>, <a href="https://arxiv.org/pdf/2410.01949">arXiv</a>)
                 <li> Oliver Broadrick, William Cao, Benjie Wang, Martin Trapp, Guy Van den Broeck. Probabilistic Circuits for Cumulative Distribution Functions. TPM Workshop at UAI 2024. (<a href="/papers/2024_TPM_Broadrick_circuits_for_cdfs.pdf">pdf</a>, <a href="https://arxiv.org/abs/2408.04229">arXiv</a>)
