--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ What (minimal) properties of an AI model enable provable guarantees about its be
             Play <a href="html/snake.html">Snake</a> (requires keyboard)
             <li>
             I'm a proud alum of <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>
+            <li> Helpful <a href="html/links.html">links</a> for me
             </ul>
             <hr>
             <p class="small text-muted">
