--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ What (minimal) properties of an AI model enable provable guarantees about its be
             <div><!--begin teaching section-->
             <h4>Teaching</h4>
             <p>
-            I have tutored students at the high school and college level in mathematics, computer science, and physics, and I've been a teaching assistant:
+            I have tutored students at the high school and college level in mathematics, computer science, and physics, and I've been a teaching assistant in the following courses:
             <ul>
             <li> Algorithms and Complexity: Spring 2025, Summer 2025 (UCLA)
             <li>Fundamentals of Artificial Intelligence: Fall 2024 (UCLA)
