--- a/html/links.html
+++ b/html/links.html
@@ -34,6 +34,7 @@
 
 <li> <a href="http://aideadlines.org/?sub=ML,KR,MISC">AI Conference deadlines</a> </li>
 
+<li> <a href="https://centralresourceunit.ucla.edu/s/article/Log-in-to-UCPath-Online">UCLA pay info (UCPath)</a>
 <li> UCLA CS </li>
 <ul>
   <li><a href="https://www.cs.ucla.edu/graduate-student-handbook/">grad student handbook</a></li>
