--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ What (minimal) properties of an AI model enable provable guarantees about its be
             -->
             <p>
             <em>Statistical Election Audits.</em>
-		Previously I studied and developed rigorous statistical procedures for detecting errors in election results [1,3,4].
+		Previously I developed rigorous statistical procedures for detecting errors in election results [1,3,4].
 <!--                Risk-limiting audits (RLAs) are
                 rigorous statistical procedures
                 used to detect errors in election results.
