--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ What (minimal) properties of an AI model enable provable guarantees about its be
             I have tutored students at the high school and college level in mathematics, computer science, and physics, and I've been a teaching assistant in the following courses:
             <ul>
             <li> Algorithms and Complexity: Spring 2025, Summer 2025 (UCLA)
-            <li>Fundamentals of Artificial Intelligence: Fall 2024 (UCLA)
+            <li>Fundamentals of Artificial Intelligence: Fall 2024, Fall 2025 (UCLA)
             <li>Foundations of Computing: Spring 2021, Spring 2022, Spring 2023 (GWU)
             <li>Discrete Structures: Spring 2020, Fall 2020, Fall 2021, Fall 2022 (GWU)
             </ul>
