--- a/html/links.html
+++ b/html/links.html
@@ -36,6 +36,7 @@
 
 <li> UCLA </li>
 <ul>
+<li> <a href="https://www.cs.ucla.edu/roomreservations/"> UCLA CS room reservation </a></li>
 
 <li> <a href="https://centralresourceunit.ucla.edu/s/article/Log-in-to-UCPath-Online">UCLA pay info (UCPath)</a>
   <li><a href="https://www.cs.ucla.edu/graduate-student-handbook/">grad student handbook</a></li>
