--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!--<tr><td><image border=1 bordercolor=black src="pv.jpg"> <P align="right"></P></td></tr>-->
 
             <p>
-                I'm a PhD student in computer science at UCLA advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science (BS and MS) at GWU, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
+                I'm a PhD student in computer science at the University of California, Los Angeles, advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science (BS and MS) at The George Washington University, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
