--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>
             </p>
             <p>
-            Contact me by email: obroadrick (at) ucla (dot) edu
+            Contact me by email: obroadrick@cs.ucla.edu
             </p>
             <div><!--begin research section-->
             <h4>Research</h4>
