titles first, line breaks, slight decrease in font size

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Oliver Broadrick</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/063cf6042c.js" crossorigin="anonymous"></script>
+<style>
+        body {
+            font-size: 15.2px; /* Set the desired base font size */
+        }
+    </style>
 </head>
 
 <body>
@@ -87,7 +92,7 @@ What (minimal) properties of an AI model enable provable guarantees about its be
             -->
             <p>
             <em>Statistical Election Audits.</em>
-		Previously I developed rigorous statistical procedures for detecting errors in election results [1,3,4].
+		Previously I developed rigorous statistical procedures for auditing elections [1,3,4].
 <!--                Risk-limiting audits (RLAs) are
                 rigorous statistical procedures
                 used to detect errors in election results.
@@ -125,22 +130,62 @@ What (minimal) properties of an AI model enable provable guarantees about its be
 
             <h6>Publications</h6>
             Also see my <a href="https://scholar.google.com/citations?user=wn58ujYAAAAJ&hl=en">Google Scholar</a> page.
-            <ol reversed> <!-- ul -->
-		<li> Gwen Yidou-Weng, Ian Li, Anji Liu, Oliver Broadrick, Guy Van den Broeck, Benjie Wang. Learning Tractable Distributions Of Language Model Continuations. In Submission, 2025. (<a href="/papers/2025_learning_tractable_continuation_distributions.pdf">pdf</a>, <a href="https://arxiv.org/pdf/2511.16054">arXiv</a>)
-                <li> Poorva Garg, Benjie Wang, Oliver Broadrick, Guy Van den Broeck, Todd Millstein. Bitblasting for Constrained Decorrelation in Tractable Image Modeling. TPM Workshop at UAI 2025. (<a href="/papers/2025_TPM_bitblasting_for_decorrelation.pdf">pdf</a>)
-                <li> Oliver Broadrick, Sanyam Agarwal, Guy Van den Broeck, Markus Bläser. The Limits of Tractable Marginalization. ICML, 2025. (<a href="/papers/2025_ICML_limits_of_marginalization.pdf">pdf</a>, <a href="https://arxiv.org/abs/2506.12020">arXiv</a>)
-                <li> Anji Liu, Oliver Broadrick, Mathias Niepert, Guy Van den Broeck. Discrete Copula Diffusion. ICLR, 2025. (<a href="/papers/2025_ICLR_discrete_copula_diffusion.pdf">pdf</a>, <a href="https://arxiv.org/pdf/2410.01949">arXiv</a>)
-                <li> Oliver Broadrick, William Cao, Benjie Wang, Martin Trapp, Guy Van den Broeck. Probabilistic Circuits for Cumulative Distribution Functions. TPM Workshop at UAI 2024. (<a href="/papers/2024_TPM_Broadrick_circuits_for_cdfs.pdf">pdf</a>, <a href="https://arxiv.org/abs/2408.04229">arXiv</a>)
-                    <li> Oliver Broadrick, Honghua Zhang, Guy Van den Broeck. Polynomial Semantics of Tractable Probabilistic Circuits. UAI 2024, Oral Presentation. (<a href="/papers/2024_UAI_Broadrick_polynomial_semantics.pdf">pdf</a>, <a href="https://arxiv.org/abs/2402.09085">arXiv</a>, <a href="https://www.youtube.com/watch?v=x3vG9yxnBWE&t=4169s">talk</a>, <a href="./slides/polynomial_semantics.pdf">slides</a>)
-<!--            <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.-->
-            <li> Oliver Broadrick. Risk-Limiting Audit PROVIDENCE and Round Size Considerations. MS Thesis, The George Washington University, 2023. (<a href="/papers/2023_MS_Thesis_Broadrick.pdf">pdf</a>)
-                <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. USENIX Security 2023. (<a href="/papers/2023_USENIX_Providence.pdf">pdf</a>, <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">usenix</a>, <a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/slides/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
+<ol reversed> <!-- ul -->
 
-            <li> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari. Real-Time AI: Using AI on the Tactical Edge. Elsevier book chapter in "Putting AI in the Critical Loop: Assured Trust and Autonomy in Human-Machine Teams", invited chapter based on presentation at 2022 AAAI Spring Symposium. (<a href="https://www.sciencedirect.com/science/article/abs/pii/B9780443159886000042">link</a>)
+<li> Learning Tractable Distributions Of Language Model Continuations. 
+<br> Gwen Yidou-Weng, Ian Li, Anji Liu, Oliver Broadrick, Guy Van den Broeck, Benjie Wang. 
+<br> In Submission, 2025. 
+ (<a href="/papers/2025_learning_tractable_continuation_distributions.pdf">pdf</a>, <a href="https://arxiv.org/pdf/2511.16054">arXiv</a>)
 
-            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski. Simulations of Ballot Polling Risk-Limiting Audits. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (<a href="/papers/2022_Voting_Broadrick_simulations.pdf">pdf</a>, <a href="https://youtu.be/XyWogUQDf1c">talk</a>, <a href="/slides/audit_sims.pdf">slides</a>)
+<li> Bitblasting for Constrained Decorrelation in Tractable Image Modeling. 
+<br> Poorva Garg, Benjie Wang, Oliver Broadrick, Guy Van den Broeck, Todd Millstein. 
+<br> TPM Workshop at UAI 2025. 
+(<a href="/papers/2025_TPM_bitblasting_for_decorrelation.pdf">pdf</a>)
 
-            </ol> 
+<li> The Limits of Tractable Marginalization. 
+<br> Oliver Broadrick, Sanyam Agarwal, Guy Van den Broeck, Markus Bläser. 
+<br> ICML, 2025. 
+(<a href="/papers/2025_ICML_limits_of_marginalization.pdf">pdf</a>, <a href="https://arxiv.org/abs/2506.12020">arXiv</a>)
+
+<li> Discrete Copula Diffusion. 
+<br> Anji Liu, Oliver Broadrick, Mathias Niepert, Guy Van den Broeck. 
+<br> ICLR, 2025. 
+(<a href="/papers/2025_ICLR_discrete_copula_diffusion.pdf">pdf</a>, <a href="https://arxiv.org/pdf/2410.01949">arXiv</a>)
+
+<li> Probabilistic Circuits for Cumulative Distribution Functions. 
+<br> Oliver Broadrick, William Cao, Benjie Wang, Martin Trapp, Guy Van den Broeck. 
+<br> TPM Workshop at UAI 2024. 
+(<a href="/papers/2024_TPM_Broadrick_circuits_for_cdfs.pdf">pdf</a>, <a href="https://arxiv.org/abs/2408.04229">arXiv</a>)
+
+<li> Polynomial Semantics of Tractable Probabilistic Circuits. 
+<br> Oliver Broadrick, Honghua Zhang, Guy Van den Broeck. 
+<br> UAI 2024, Oral Presentation. 
+(<a href="/papers/2024_UAI_Broadrick_polynomial_semantics.pdf">pdf</a>, <a href="https://arxiv.org/abs/2402.09085">arXiv</a>, <a href="https://www.youtube.com/watch?v=x3vG9yxnBWE&t=4169s">talk</a>, <a href="./slides/polynomial_semantics.pdf">slides</a>)
+
+<!-- <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.-->
+
+<li> Risk-Limiting Audit PROVIDENCE and Round Size Considerations. 
+<br> Oliver Broadrick. 
+<br> MS Thesis, The George Washington University, 2023. 
+(<a href="/papers/2023_MS_Thesis_Broadrick.pdf">pdf</a>)
+
+<li> PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. 
+<br> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. 
+<br> USENIX Security 2023. 
+(<a href="/papers/2023_USENIX_Providence.pdf">pdf</a>, <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">usenix</a>, <a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/slides/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
+
+
+<li> Real-Time AI: Using AI on the Tactical Edge. 
+<br> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari. 
+<br> Elsevier book chapter in "Putting AI in the Critical Loop: Assured Trust and Autonomy in Human-Machine Teams".
+(<a href="https://www.sciencedirect.com/science/article/abs/pii/B9780443159886000042">link</a>)
+
+<li> Simulations of Ballot Polling Risk-Limiting Audits. 
+<br> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski. 
+<br> Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. 
+(<a href="/papers/2022_Voting_Broadrick_simulations.pdf">pdf</a>, <a href="https://youtu.be/XyWogUQDf1c">talk</a>, <a href="/slides/audit_sims.pdf">slides</a>)
+
+    </ol> 
 
             <h6>Research Talks</h6>
             <ul>
@@ -153,7 +198,7 @@ What (minimal) properties of an AI model enable provable guarantees about its be
             <div><!--begin teaching section-->
             <h4>Teaching</h4>
             <p>
-            I have tutored students at the high school and college level in mathematics, computer science, and physics, and I've been a teaching assistant in the following courses:
+            I have tutored at the high school and college level in mathematics, computer science, and physics, and I've been a teaching assistant in the following courses:
             <ul>
             <li> Algorithms and Complexity: Spring 2025, Summer 2025 (UCLA)
             <li>Fundamentals of Artificial Intelligence: Fall 2024, Fall 2025 (UCLA)
