--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ What (minimal) properties of an AI model enable provable guarantees about its be
 <ol reversed> <!-- ul -->
 
 <li> Learning Tractable Distributions Of Language Model Continuations. 
-<br> Gwen Yidou-Weng, Ian Li, Anji Liu, Yuchen Cui, Oliver Broadrick, Guy Van den Broeck, Benjie Wang. 
+<br> Gwen Yidou-Weng, Ian Li, Anji Liu, Oliver Broadrick, Yuchen Cui, Guy Van den Broeck, Benjie Wang. 
 <br> In Submission, 2025. 
  (<a href="/papers/2025_learning_tractable_continuation_distributions.pdf">pdf</a>, <a href="https://arxiv.org/pdf/2511.16054">arXiv</a>)
 
